# Rust-projects

Todo_FrontEnd/: package-lock.json
Todo_FrontEnd/src/: App.tsx
Todo_project/Todo_FrontEnd/: package.json
Todo_project/Todo_FrontEnd/src/: App.tsx
Todo_project/todo_web_app/: Cargo.toml
Todo_project/todo_web_app/migrations/: 20251118162023_create_todo.up.sql
Todo_project/todo_web_app/src/: main.rs
Todo_project/todo_web_app/src/db/: db_conn.rs
Todo_project/todo_web_app/src/todo_fn/: create_todo.rs  delete_todo.rs  mark_todo.rs  mod.rs  read_todo.rs  todo_struct.rs
rust_shell/src/: main.rs
rust_shell/src/shell_functions/: cd.rs  mod.rs  redirect.rs
todo_web_app/: Cargo.toml
todo_web_app/src/: main.rs
todo_web_app/src/todo_fn/: create_todo.rs  delete_todo.rs  mark_todo.rs  mod.rs
