[package]
name = "todo_web_app"
version = "0.1.0"
edition = "2024"

[dependencies]
serde={version="1",features=["derive"]}
serde_json="1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
axum = { version = "0.8.6"}
tower-http = { version = "0.6.6", features = ["cors"]}
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",   # or runtime-async-std
    "postgres",
    "macros"
] }
dotenvy = "0.15.7"
